--- a/upload/index.html
+++ b/upload/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="theme.css">
   <title>Upload files</title>
 </head>
 <body>
+  <div class="container">
+    <div class="card">
+      <button class="btn">Открыть</button>
+      <button class="btn primary">Загрузить</button>
+    </div>
+  </div>
 
   <script src="app.js" type="module"></script>
 </body>
