feat: input file settings

--- a/upload/index.html
+++ b/upload/index.html
@@ -11,8 +11,9 @@
 <body>
   <div class="container">
     <div class="card">
-      <button class="btn">Открыть</button>
-      <button class="btn primary">Загрузить</button>
+      <input id="file" type="file">
+<!--      <button class="btn">Открыть</button>-->
+<!--      <button class="btn primary">Загрузить</button>-->
     </div>
   </div>
 
